--- a/zxingLibrary/src/main/res/values/strings.xml
+++ b/zxingLibrary/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">zxingLibrary</string>
+    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
+
 </resources>
